--- a/final_report.html
+++ b/final_report.html
@@ -367,6 +367,27 @@ div.tocify {
      
   </a>
 </li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+    Contact Us
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
+    <li>
+      <a href="mailto:&lt;des2190@cumc.columbia.edu&gt;">Diana Sanchez</a>
+    </li>
+    <li>
+      <a href="mailto:&lt;cl4045@cumc.columbia.edu&gt;">Chong Li</a>
+    </li>
+    <li>
+      <a href="mailto:&lt;ma3997@cumc.columbia.edu&gt;">Matthew Angulo</a>
+    </li>
+    <li>
+      <a href="mailto:&lt;am5195@cumc.columbia.edu&gt;">Alexander Melamed</a>
+    </li>
+  </ul>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
@@ -385,6 +406,19 @@ div.tocify {
 <h3>Final Report</h3>
 </div>
 
+<!DOCTYPE html>
+
+ 
+<hr />
+<p style="text-align: center;">
+Matthew Angulo (am5195), Chong Li (cl4045), Alexander Melamed (am5195), Diana Sanchez (des2190)
+</p>
+
+<p style="text-align: center;">
+Data Science Fall 2020
+</p>
+
+<p> </p>
 
 
 </div>
