--- a/index.html
+++ b/index.html
@@ -404,13 +404,13 @@ div.tocify {
 </div>
 
 
-<p><img src="images/covid.jpg" style="width:100%"></p>
+<p><img src="images/covid.jpg" style="width:100%"> source: <a href="https://www.fda.gov/food/food-safety-during-emergencies/food-safety-and-coronavirus-disease-2019-covid-19" class="uri">https://www.fda.gov/food/food-safety-during-emergencies/food-safety-and-coronavirus-disease-2019-covid-19</a></p>
 <div id="introduction" class="section level2">
 <h2>Introduction</h2>
 <p>(information on COVID/ why we decided to study this)</p>
 </div>
-<div id="final-report" class="section level2">
-<h2>Final Report</h2>
+<div id="final-reports" class="section level2">
+<h2>Final Reports</h2>
 <p>Our <a href="final_report.html">Report</a> can be found here</p>
 </div>
 <div id="findings" class="section level2">
