--- a/index.html
+++ b/index.html
@@ -349,15 +349,19 @@ div.tocify {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>
-  <a href="dashboard.html">Analyses</a>
-</li>
-<li>
-  <a href="final_report.html">Final Report</a>
-</li>
+        
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
+  <a href="about.html">About</a>
+</li>
+<li>
+  <a href="dashboard.html">Analyses</a>
+</li>
+<li>
+  <a href="final_report.html">Conclusion</a>
+</li>
+<li>
   <a href="https://github.com/dianaesai/p8105_final_project.git">
     <span class="fa fa-github fa-lg"></span>
      
