--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="about.html">About</a>
+  <a href="about.html">Introduction</a>
 </li>
 <li>
   <a href="dashboard.html">Analyses</a>
