final report page

--- a/final_report.html
+++ b/final_report.html
@@ -25,6 +25,8 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -347,15 +349,19 @@ div.tocify {
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li>
-  <a href="dashboard.html">Analyses</a>
-</li>
-<li>
-  <a href="final_report.html">Final Report</a>
-</li>
+        
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
+  <a href="about.html">Introduction</a>
+</li>
+<li>
+  <a href="dashboard.html">Analyses</a>
+</li>
+<li>
+  <a href="final_report.html">Conclusion</a>
+</li>
+<li>
   <a href="https://github.com/dianaesai/p8105_final_project.git">
     <span class="fa fa-github fa-lg"></span>
      
